--- a/contact.html
+++ b/contact.html
@@ -153,10 +153,10 @@
                 <div class="cs-right-section">
                     <!--Email-->
                     <span class="cs-header">Email</span>
-                    <a class="cs-link" href="mailto:support@yourdomain.com">support@yourdomain.com</a>
+                    <a class="cs-link" href="mailto:support@yourdomain.com">info@b3fitness.com</a>
                     <!--Phone-->
                     <span class="cs-header">Phone</span>
-                    <a class="cs-link" href="tel:219-555-1234">(219) 555-1234</a>
+                    <a class="cs-link" href="tel:219-555-1234">(123)-456-789</a>
                     <!--Address-->
                     <span class="cs-header">Address</span>
                     <a class="cs-link" href="">2553 Woodbridge Lane, <span class="cs-block">Boston Ware 120</span></a>
