--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="keywords" content="">
 
     <!--Social Media Display-->
-    <meta property="og:title" content="Title that shows up on google searches"/>
-    <meta property="og:description" content="Meta description for the page"/>
+    <meta property="og:title" content="B3 Fitness"/>
+    <meta property="og:description" content="B3 Fitness: Your Path to Wellness & Strength. Achieve your fitness goals with expert guidance, personalized training, and supportive community. Join us for a transformative journey to a healthier, stronger you."/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
     <meta property="og:image" content="assets/images/social.webp"/>
