Beginning to update stuff

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
 
         <section id="hero-81">
             <div class="cs-container">
-                <h1 class="cs-title">Building Bodies, Boosting Health, and Bringing Balance</h1>
+                <h1 class="cs-title">B3 Fitness
+                </h1>
                 <p class="cs-text">
-                    Micro-gym providing expert training, cutting-edge equipment, and personalized wellness programs tailored for all fitness levels. 
+                    Our mission is to create a healthy you, through teaching, learning, and loving. Your goals become our goals, we become a team, we become a family. 
+ 
                 </p>
                 <a href="" class="cs-button-solid">Schedule Now</a>
             </div>
@@ -126,7 +128,11 @@
                     </picture>
                     <h2 class="cs-title">Personalized Training Programs</h2>
                     <p class="cs-text">
-                        Tailored workout plans designed to meet individual fitness goals and maximize results.
+                        Our one on one HIIT workout plans are designed to meet your individual fitness goals. Our coaches will maximize your results and take you to the fitness level that your body deserves. 
+                    </p>
+                    <p style="padding-top: 1rem;" class="cs-text">If you're brand new to fitness or have been working out your entire life, I highly suggest you experience an individual session. 
+                    </p>
+                    <p style="padding-top: 1rem; font-weight: 700;" class="cs-text">Your first session is always free. 
                     </p>
                 </li>
                 <li class="cs-item">
@@ -135,16 +141,30 @@
                     </picture>
                     <h2 class="cs-title">Group Fitness Classes</h2>
                     <p class="cs-text">
-                        Dynamic and energizing classes led by certified instructors, offering a variety of workouts from yoga to HIIT. 
+                        Our groups are usually 4-8 people, and we offer a variety of classes for all fitness levels. 
+                    </p>
+                    <p style="padding-top: 1rem;" class="cs-text">It’s an amazing vibe to be in a small group class, the music is bumping, smiles and laughter between circuits, friendships are made, and sweat is guaranteed.
+
+                    </p>
+                    <p style="padding-top: 1rem; font-weight: 700;" class="cs-text">Your first session is always free. 
                     </p>
                 </li>
                 <li class="cs-item">
                     <picture class="cs-icon">
                         <img loading="lazy" decoding="async" src="assets/svgs/apple.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
-                    <h2 class="cs-title">Nutritional Counseling</h2>
+                    <h2 class="cs-title">Sports Clinics</h2>
                     <p class="cs-text">
-                        Professional guidance and personalized nutrition plans to optimize performance, enhance recovery, and support overall well-being. 
+                        Our sport specific training and clinics will develop and enhance your athletic performance. Training your speed, agility, footwork, reactivity, core, explosiveness, strength and power. The results will instantly give your young athlete an edge over their competition. 
+                    </p>
+                    <p style="padding-top: 1rem;" class="cs-text">
+                        Currently we’re working with basketball, football, baseball, volleyball, tennis, sword fighting, and sporting clay shooting. We will design a program to fit any athlete and any sport. 
+                    </p>
+                    <p style="padding-top: 1rem;" class="cs-text">
+                        We work with athletes starting at 8 years old up to high school, college, and the professional level. 
+                    </p>
+                    <p style="padding-top: 1rem; font-weight: 700;" class="cs-text">Contact us to schedule a private clinic for your sports team. 
+ 
                     </p>
                 </li>
             </ul>
@@ -167,11 +187,11 @@
                     <span class="cs-topper">Who We Are</span>
                     <h2 class="cs-title">B3 FITNESS</h2>
                     <p class="cs-text">
-                        At our micro-gym, we're more than a fitness center - we're a holistic wellness community. Our skilled trainers, top-tier equipment, and personalized services help you achieve your goals. Join our supportive community for transformation today!
+                        We are a local, family owned business in Tucson, AZ. We have 25+ years of experience in the fitness and sports industry. 
                     </p>
-                    <p class="cs-text">
+                    <!-- <p class="cs-text">
                         We're dedicated to sculpting stronger bodies, fostering healthier lifestyles, and building lasting connections. With our expert trainers, diverse classes, and personalized approach, we're here to guide you towards your fitness aspirations, one step at a time.
-                    </p>
+                    </p> -->
                     <a href="" class="cs-button-solid">Call Now</a>
                 </div>
             </div>
@@ -194,11 +214,11 @@
                     <span class="cs-topper">What We Do</span>
                     <h2 class="cs-title">Transform lives through fitness and wellness.</h2>
                     <p class="cs-text">
-                        B3 Fitness is dedicated to transforming lives through comprehensive fitness and wellness programs. Our expert trainers provide personalized guidance and support, empowering individuals to surpass their fitness goals.
+                        We will change your life. Our goal is to make you the healthiest version of yourself from the inside out. 
                     </p>
-                    <p class="cs-text">
+                    <!-- <p class="cs-text">
                         With state-of-the-art equipment and a supportive community, we create an environment where every member can thrive. We believe in holistic well-being, fostering resilience, growth, and lasting positive changes in all aspects of our members' lives.
-                    </p>
+                    </p> -->
                     <a href="" class="cs-button-solid">Learn More</a>
                 </div>
             </div>
