--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
                         <picture class="cs-picture">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
-                        <span class="cs-name">Zachary</span>
-                        <span class="cs-job-title">Nutritionist</span>
+                        <span class="cs-name">Dirk Nelson</span>
+                        <span class="cs-job-title">Owner/operator</span>
                         <p class="cs-item-text">
-                            ACE-certified trainer specializing in strength and conditioning.
+                            Has been in the fitness industry for 20+ years. 
                         </p>
                         <!-- Social Flexbox -->
                         <div class="cs-social">
@@ -306,10 +306,10 @@
                         <picture class="cs-picture">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
-                        <span class="cs-name">John</span>
-                        <span class="cs-job-title">Ceritifed IFBB Pro</span>
+                        <span class="cs-name">AJ</span>
+                        <span class="cs-job-title"></span>
                         <p class="cs-item-text">
-                            Experienced CrossFit coach passionate about functional fitness.
+                            NASM certified
                         </p>
                         <!-- Social Flexbox -->
                         <div class="cs-social">
@@ -325,10 +325,11 @@
                         <picture class="cs-picture">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
-                        <span class="cs-name">Emily</span>
-                        <span class="cs-job-title">Zen Connoisseur</span>
+                        <span class="cs-name">Kylie Nelson</span>
+                        <span class="cs-job-title"></span>
                         <p class="cs-item-text">
-                            Yoga instructor blending mindfulness and movement for holistic wellness.
+                            Former collegiate volleyball player now a doctor of Physical Therapy. She can modify any workout to work around any pre-existing injuries, and conducts injury prevention/movement optimization screenings for our athletes. 
+
                         </p>
                         <!-- Social Flexbox -->
                         <div class="cs-social">
